# ideal-pancake

./: .gitignore  BaseDockerfile  BuildDockerfile  LICENSE  README.md  docker-compose.yml  ideal-pancake.cabal  run_pancake.sh
android/: android_read_me.txt
android/idealpancake/app/: build.gradle
android/idealpancake/app/src/androidTest/java/com/example/andrew/idealpancake/: ApplicationTest.java
android/idealpancake/app/src/main/: AndroidManifest.xml
android/idealpancake/app/src/main/java/com/example/andrew/idealpancake/: MainActivity.java  scannerJSI.java
android/idealpancake/app/src/main/res/layout/: activity_main.xml
android/idealpancake/app/src/main/res/values/: strings.xml
android/idealpancake/app/src/test/java/com/example/andrew/idealpancake/: ExampleUnitTest.java
app/: JSClient.hs
database/: db.sql
run/: Dockerfile
scripts/: build.sh  build_base.sh
src/: API.hs  Config.hs  Html.hs  Lib.hs  Persistence.hs  Server.hs  Types.hs
src/Types/: Book.hs  Common.hs  Copy.hs  Rental.hs  Reservation.hs  Tag.hs  User.hs
static/: add_a_book.html  add_a_book_m.html  add_a_copy.html  add_a_user.html  book_template.html  client.js  client_util.js  db.sql  delete_a_book.html  landing_page.html  library_template.html  list_books.html  login.html  rent_a_book.html  rent_a_book_m.html  return_book.html  return_book_m.html  show_users.html  signup.html
