name:                ideal-pancake
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oswynb/ideal-pancake#readme
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          oztastic703@gmail.com
copyright:           Copyright 2016 Oswyn Brent
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                       Config
                       Persistence
                       Server
                       Html
                       Types
                       Types.Book
                       Types.Common
                       Types.Copy
                       Types.User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-casing
                     , bytestring
                     , containers
                     , file-embed
                     , resource-pool
                     , servant-docs
                     , servant-server
                     , http-types
                     , mtl
                     , network-uri
                     , postgresql-simple
                     , stm
                     , text
                     , time
                     , uuid
                     , vector
                     , wai
                     , warp
                     , blaze-html
                     , blaze-markup
                     , servant-blaze
  ghc-options:         -Wall
  default-language:    Haskell2010

executable ideal-pancake
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ideal-pancake
  default-language:    Haskell2010

executable ideal-pancake-js-client
  hs-source-dirs:      app
  main-is:             JSClient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ideal-pancake
                     , servant-js
  default-language:    Haskell2010

test-suite ideal-pancake-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ideal-pancake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oswynb/ideal-pancake
